[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/grass.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/UndefinedBehavior_transparency.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/cheese.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/cheese_bigger.png" type="Texture" id=5]
[ext_resource path="res://Characters/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Items/Cheese.tscn" type="PackedScene" id=7]

[sub_resource type="InputEventAction" id=1]
action = "ui_accept"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 219.186
margin_top = 10.2744
margin_right = -204.814
margin_bottom = 10.2744
rect_min_size = Vector2( 600, 600 )
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 300, 300 )
texture = ExtResource( 2 )
expand = true

[node name="Title" type="Sprite" parent="."]
position = Vector2( 513.269, 298.477 )
scale = Vector2( 10.1915, 8.53261 )
texture = ExtResource( 3 )

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 7.94424
margin_top = 374.598
margin_right = 47.9442
margin_bottom = 414.598
rect_scale = Vector2( 4.89641, 3.49157 )
shortcut = SubResource( 2 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true

[node name="glitch_timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 995.632, 725.442 )
scale = Vector2( 10, 10 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512.621, 301.651 )
current = true

[node name="Cheese" parent="." instance=ExtResource( 7 )]
position = Vector2( 96.787, 453.788 )
scale = Vector2( 13.6329, 12.6915 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="glitch_timer" to="." method="_on_glitch_timer_timeout"]
[connection signal="success" from="Cheese" to="." method="_on_Cheese_success"]
